# py-sscstu

./: .gitignore  README.md  build.sh  setup.cfg
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
src/sscstu/: transfer.py
src/sscstu/storage/: __init__.py
