[metadata]
name = sscstu
version = 0.0.1
author = 16awala
description = Super Simple Cloud Storage Transfer Utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/16awala/py-sscstu
project_urls =
    Bug Tracker = https://github.com/16awala/py-sscstu/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: LGPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src